--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
-body{
+html::-webkit-scrollbar,body::-webkit-scrollbar {
+    display: none;
+}
+
+html, body{
+    overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
+    scrollbar-width: none;
+    margin: 0;
+    padding: 0;
 }
 .navbar{
+    padding-left: 25px;
     height: 60px;
     text-align: center;
     display: flex;
+    background-color: aqua;
     align-items: center;
     justify-content: space-between;
     color: rgb(0, 0, 0);
@@ -14,15 +24,16 @@ body{
 .content{
     display: flex;
     flex-direction: row;
+    height: calc(100vh - 60px);
 }
 
 .sidebar{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
     text-align: left;
     width: 250px;
-    height: 91vh;
+    height: 100vh;
     background-color: aquamarine;
 }
 
@@ -31,29 +42,62 @@ body{
     display: flex;
     text-align: center;
     align-items: center;
-    padding-left: 35px;
-    background-color: aqua;
-    height: 30px;
+    padding-left: 15px;
+    height: 40px;
+    margin-left: 20px;
     border-radius: 10px 0 0 10px;
 
 }
 
 .main{
-    gap: 55px;
+    gap: 25px;
     display: flex;
-    padding-left: 20px;
+    padding-left: 90px;
     flex-direction: column;
 }
 
 .title{
+    gap: 60vw;
     height: 10vh;
-    width: 80vw;
+    width: 74vw;
+    border-bottom:2px solid black ;
     align-items: center;
     display: flex;
 }
 
+.scroll-container{
+    flex: 1;
+    min-height: 0;
+    height: calc(150vh); /* adjust based on your layout */
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.scroll-container::-webkit-scrollbar{
+    display: none;
+}
+
+.title-row1{
+    display: flex;
+    gap: 31vw;
+    flex-direction: row;
+}
+
+.row1{
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.row2{
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
 .card{
-    height: 250px;
-    width: 400px;
+    height: 300px;
+    width: 600px;
     background-color: rgb(152, 157, 162);
 }
