--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html::-webkit-scrollbar,body::-webkit-scrollbar {
 
 html, body{
     overflow: hidden;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
     scrollbar-width: none;
     margin: 0;
     padding: 0;
@@ -18,7 +18,10 @@ html, body{
     align-items: center;
     justify-content: space-between;
     color: rgb(0, 0, 0);
-    gap: 20px;
+}
+
+.navbar img{
+    display: none;
 }
 
 .content{
@@ -80,7 +83,7 @@ html, body{
 
 .title-row1{
     display: flex;
-    gap: 31vw; /*520px*/
+    gap: 31vw;
     flex-direction: row;
 }
 
@@ -101,22 +104,187 @@ html, body{
     width: 600px;
     background-color: rgb(152, 157, 162);
 }
+.parent {
+    display: grid;
+    grid-template-columns: repeat(2, 600px);
+    grid-template-rows: 25px 300px 25px 300px;
+    grid-column-gap: 40px;
+    grid-row-gap: 20px;
+}
 
-@media (max-width: 1703px) {
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+    .div2 { grid-area: 1 / 2 / 2 / 3; }
+    .div3 { grid-area: 2 / 1 / 3 / 2; }
+    .div4 { grid-area: 2 / 2 / 3 / 3; }
+    .div5 { grid-area: 3 / 1 / 4 / 2; }
+    .div6 { grid-area: 3 / 2 / 4 / 3; }
+    .div7 { grid-area: 4 / 1 / 5 / 2; }
+    .div8 { grid-area: 4 / 2 / 5 / 3; }
+
+
+@media (max-width: 321px) /* Hp Kecil */ {
+    h1{
+        font-size: 1.5rem;
+    }
+    .navbar{
+        text-align: center;
+    }
+    .sidebar{
+    display: none;
+    }
     .card{
-        height: 250px;
-        width: 450px;
+        height: 200px;
+        width: 90vw; 
+    }
+    .main{
+        padding-left: 5vw;
+    }
+    .title{
+        width: 90vw;
+        gap: 30vw;
+    }
+    .parent {
+        display: grid;
+        grid-template-columns: 600px;
+        grid-template-rows: 25px 200px 25px 200px 25px 200px 25px 200px;
+        grid-column-gap: 40px;
+        grid-row-gap: 20px;
+    }
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+        .div2 { grid-area: 3 / 1 / 4 / 2; }
+        .div3 { grid-area: 2 / 1 / 3 / 2; }
+        .div4 { grid-area: 4 / 1 / 5 / 2; }
+        .div5 { grid-area: 5 / 1 / 6 / 2; }
+        .div6 { grid-area: 7 / 1 / 8 / 2; }
+        .div7 { grid-area: 6 / 1 / 7 / 2; }
+        .div8 { grid-area: 8 / 1 / 9 / 2; }
+    .navbar{
+        height: 7vh;
+        padding-right: 5vw;
+        padding-left: 5vw;
+        text-align: center;
+        display: flex;
+        align-items: center;
+    }
+    .navbar img{
+        display: block;
+    }
+}
+
+@media (min-width: 321px) and (max-width: 767px) { /* Hp */
+    h1{
+        font-size: 2rem;
+    }
+    .sidebar{
+    display: none;
+    }
+    .card{
+        height: 200px;
+        width: 90vw; 
+    }
+    .main{
+        padding-left: 20px;
+    }
+    .title{
+        width: 90vw;
+        gap: 33.5vw;
+    }
+    .parent {
+        display: grid;
+        grid-template-columns: 600px;
+        grid-template-rows: 25px 200px 25px 200px 25px 200px 25px 200px;
+        grid-column-gap: 40px;
+        grid-row-gap: 20px;
+    }
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+        .div2 { grid-area: 3 / 1 / 4 / 2; }
+        .div3 { grid-area: 2 / 1 / 3 / 2; }
+        .div4 { grid-area: 4 / 1 / 5 / 2; }
+        .div5 { grid-area: 5 / 1 / 6 / 2; }
+        .div6 { grid-area: 7 / 1 / 8 / 2; }
+        .div7 { grid-area: 6 / 1 / 7 / 2; }
+        .div8 { grid-area: 8 / 1 / 9 / 2; }
+    .navbar{
+        height: 7vh;
+        padding-right: 5vw;
+        padding-left: 5vw;
+        text-align: center;
+        display: flex;
+        align-items: center;
+    }
+    .navbar img{
+        display: block;
+    }
+}
+
+@media (min-width: 767px) and (max-width: 1023px){ /* Tablet */
+    .card{
+        height: 300px;
+        width: 425px;
+    }
+    .parent {
+        display: grid;
+        grid-template-columns: 600px;
+        grid-template-rows: 25px 300px 25px 300px 25px 300px 25px 300px;
+        grid-column-gap: 40px;
+        grid-row-gap: 20px;
+    }
+
+        .div1 { grid-area: 1 / 1 / 2 / 2; }
+        .div2 { grid-area: 3 / 1 / 4 / 2; }
+        .div3 { grid-area: 2 / 1 / 3 / 2; }
+        .div4 { grid-area: 4 / 1 / 5 / 2; }
+        .div5 { grid-area: 5 / 1 / 6 / 2; }
+        .div6 { grid-area: 7 / 1 / 8 / 2; }
+        .div7 { grid-area: 6 / 1 / 7 / 2; }
+        .div8 { grid-area: 8 / 1 / 9 / 2; }
+    .title{
+        gap: 25vw;
+        width: 55vw;
     }
 
     .main{
-        padding-left: 55px;
+        padding-left: 6vw;
     }
+}
 
+@media (min-width: 1024px) and (max-width: 1279px) { 
+    .card{
+        width: 350px;
+        height: 200px;
+    }
+     .parent {
+        display: grid;
+        grid-template-columns: 390px;
+        grid-template-rows: 25px 200px 25px 200px ;
+        grid-column-gap: 0px;
+        grid-row-gap: 20px;
+    }
+    
+    .main {
+        padding-left: 2vw;
+    }
     .title{
-        gap: 55vw;
+        gap: 49vw;
+        width: 72vw;
     }
-
-    .title-row1{
-        gap: 29vw;
+}
+@media (min-width: 1280px) and (max-width: 1535px) { 
+    .card{
+        width: 555px;
+    }
+    .main{
+        padding-left: 2vw;
+    }
+    .title{
+        gap: 63vw;
+        width: 79vw;
+    }
+    .parent {
+        display: grid;
+        grid-template-columns: 580px;
+        grid-template-rows: 25px 300px  ;
+        grid-column-gap: 0px;
+        grid-row-gap: 20px;
     }
 }
